[project]
name = "clean_print_utils"
version = "1.0.0"
authors = [
  { name='destrex-271', email="destrex271@gmail.com" },
  { name='darth-boson', email="zboson123@outlook.com" },
]
description = "A package with utility functions to make cli printing easy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/destrex271/print_utils"
"Bug Tracker" = "https://github.com/destrex271/print_utils/issues"

